# canada-basketball-scoutai-platform

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  docker-compose.local.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/db/: __init__.py  postgres.py  sqlite.py
backend/app/routes/: agent.py  auth.py  pages.py  pdf.py  search.py  sql.py
backend/app/schemas/: __init__.py  agent.py  auth.py  player.py
backend/app/services/: agent_service.py  player_service.py  search_service.py  stats_calculator.py  team_service.py
backend/app/static/: index.html
backend/app/static/css/: style.css
backend/app/static/js/: app.js
backend/config/: __init__.py  constants.py  logging.py  pdf_constants.py  settings.py
backend/db/: ccaa.db
backend/graph/: configuration.py  graph.py  state.py
backend/graph/nodes/: __init__.py  generate_response.py  router.py  scout.py  stats_lookup.py
backend/graph/prompts/: __init__.py  generate_response.py  router.py  scout.py  stats_lookup.py
backend/graph/schemas/: __init__.py  scouting.py  text.py  visualization.py
backend/graph/tools/: __init__.py  cebl_tool.py
backend/graph/tools/pdf_generator/: pdf_generator.py
backend/graph/tools/pdf_generator/pdf_assets/: styles.css  template.html
backend/graph/utils/: __init__.py  gcs_helpers.py
backend/scripts/: cleanup_test_files.sh  setup_gcs.sh
backend/tests/: QUICK_START.md  README.md  test_api.py  test_configuration.py  test_gcs_helpers.py  test_gcs_integration.py  test_pdf_generation.py  test_run_sql.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: robots.txt
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CardNav.tsx  ErrorBoundary.tsx  FeedbackButton.tsx  Footer.tsx
frontend/src/config/: api.ts
frontend/src/constants/: index.ts  leagues.ts  nodes.ts  positions.ts  statDescriptions.ts  statKeyMapping.ts
frontend/src/hooks/: useBackendStatus.ts  useDataExplorer.ts  useOnboarding.ts  usePlayerSearch.ts
frontend/src/pages/: AIAgentPage.tsx  AboutPage.tsx  DataExplorerPage.tsx  FAQPage.tsx  HomePage.tsx  PlayerSearchPage.tsx
frontend/src/services/: agentService.ts  api.ts  authService.ts  dataService.ts
scripts/: generate-gemini-context.sh
(+59 files in other folders)
