[project]
name = "canada-basketball-scouting-platform-api"
version = "0.0.1-beta"
description = "Scouting platform API for identifying Canadian basketball talent, powered by AI"
authors = [{ name = "OJ Adeyemi", email = "ojieadeyemi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "fastapi[standard] (==0.120.4)",
    "aiosqlite (==0.21.0)",
    "psycopg[binary,pool] (==3.2.12)",
    "langchain (==1.0.3)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-google-genai (>=3.0.1,<4.0.0)",
    "langchain-cohere (>=0.5.0,<0.6.0)",
    "langgraph (>=1.0.2,<2.0.0)",
    "langgraph-checkpoint-postgres (>=3.0.0,<4.0.0)",
    "playwright (>=1.56.0,<2.0.0)",
    "google-cloud-storage (>=3.4.1,<4.0.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]


[tool.poetry]
package-mode = false
name = "canada-basketball-scouting-platform-api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"

[tool.ruff]
# Global settings for Ruff
line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
